--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "husky": "^4.2.2",
     "jest": "^25.1.0",
     "jest-junit": "^10.0.0",
+    "jest-serializer-html": "^7.0.0",
+    "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "test:ci": "npm test -- --ci --reporters='default' --reporter='jest-junit'"
   },
@@ -33,9 +35,10 @@
   "jest-unit": {
     "outputDirectory": "test-results/jest",
     "outputName": "result.xml",
-    "suiteName": "salary-calculator-unit-test"
+    "suiteName": "apartments-gallery-holidu-unit-test"
   },
   "jest": {
+    "verbose": true,
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
