--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apartments_gallery_holidu",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
@@ -14,10 +14,14 @@
     "enzyme-to-json": "^3.4.4",
     "husky": "^4.2.2",
     "jest": "^25.1.0",
+    "jest-fetch-mock": "^3.0.1",
     "jest-junit": "^10.0.0",
+    "jest-mock": "^25.1.0",
     "jest-serializer-html": "^7.0.0",
+    "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,15 +36,10 @@
       "pre-push": "npm test"
     }
   },
-  "jest-unit": {
-    "outputDirectory": "test-results/jest",
-    "outputName": "result.xml",
-    "suiteName": "apartments-gallery-holidu-unit-test"
-  },
   "jest": {
     "verbose": true,
     "snapshotSerializers": [
-      "enzyme-to-json/serializer"
+      "<rootDir>/node_modules/enzyme-to-json/serializer"
     ],
     "collectCoverageFrom": [
       "<rootDir>/src/**/*.{js,jsx}",
