--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apartments_gallery_holidu",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
@@ -27,8 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "test:ci": "npm test -- --ci --reporters='default' --reporter='jest-junit'"
+    "eject": "react-scripts eject"
   },
   "husky": {
     "hooks": {
