--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
   "name": "apartments_gallery_holidu",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "0.9.5",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "husky": "^4.2.2",
-    "jest": "^25.1.0",
     "jest-fetch-mock": "^3.0.1",
     "jest-junit": "^10.0.0",
     "jest-mock": "^25.1.0",
     "jest-serializer-html": "^7.0.0",
     "react-redux": "^7.1.3",
+    "react-scripts": "^3.4.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm test"
-    }
+  "jest-junit": {
+    "outputDirectory": "test-results/jest",
+    "outputName": "results.xml",
+    "suiteName": "apartments_gallery_holidu-unit-tests"
   },
   "jest": {
-    "verbose": true,
     "snapshotSerializers": [
-      "<rootDir>/node_modules/enzyme-to-json/serializer"
+      "enzyme-to-json/serializer"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "collectCoverageFrom": [
-      "<rootDir>/src/**/*.{js,jsx}",
-      "!<rootDir>/node_modules/"
-    ],
-    "coverageReporters": [
-      "text"
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
